--- a/sites/all/themes/prolifik/css/prolifik-content.css
+++ b/sites/all/themes/prolifik/css/prolifik-content.css
@@ -1,27 +1,52 @@
 /* @override 
-	http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-content.css?mcij8s
-	http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-content.css?md6ri8 */
-
+		http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-content.css?me44sk
+	http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-content.css?me4707 */
+		
+		
 /* Content */
-#section-content {background-image: url(../images/long-stainless.jpg);
+#section-content {
 	-moz-box-shadow: inset 0 24px 40px #424041;
 	-webkit-box-shadow: inset 0 24px 40px #424041;
 	box-shadow: inset 0 24px 40px #424041;
-}
-#section-content .section-wrapper {
-  overflow: hidden;
-}
-#section-content .zone-wrapper {
-	/* Old browsers */
-   /* FF3.6+ */
-   /* Chrome,Safari4+ */
-   /* Chrome10+,Safari5.1+ */
-   /* Opera 11.10+ */
-   /* IE10+ */
-   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */
+	padding-top: 10px;
+	background: url(../images/long-stainless.jpg) repeat-x;
 }
 
+#section-content .section-wrapper {
+  overflow: hidden;
+-webkit-box-shadow: #666 0px 0px 10px;
+-moz-box-shadow: #666 0px 0px 10px;
+box-shadow: #666 0px 0px 10px;
+-webkit-border-top-left-radius: 15px;
+-webkit-border-top-right-radius: 15px;
+-moz-border-radius-topleft: 15px;
+-moz-border-radius-topright: 15px;
+border-top-left-radius: 15px;
+border-top-right-radius: 15px;
+padding-bottom: 20px;
+background-color: white;
+}
+#section-content .zone-wrapper {
+  background: rgb(255,255,255); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(247,247,247,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(247,247,247,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 100%); /* IE10+ */
+  background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(247,247,247,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f7f7f7',GradientType=0 ); /* IE6-9 */
+  padding-top: 10px;
+}
+#section-content .zone-wrapper .zone {
+  background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 50%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 50%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 50%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 50%,rgba(255,255,255,1) 100%); /* IE10+ */
+  background: linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 50%,rgba(255,255,255,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+  padding-bottom: 10px;
+}
 #section-content .zone-wrapper > .separator {
   background: rgb(255,255,255); /* Old browsers */
   background: -moz-linear-gradient(left,  rgba(255,255,255,1) 0%, rgba(212,212,212,1) 49%, rgba(255,255,255,1) 100%); /* FF3.6+ */
@@ -31,26 +56,46 @@
   background: -ms-linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(212,212,212,1) 49%,rgba(255,255,255,1) 100%); /* IE10+ */
   background: linear-gradient(left,  rgba(255,255,255,1) 0%,rgba(212,212,212,1) 49%,rgba(255,255,255,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
-/*  height: 1px;*/
+  height: 1px;
 }
 #section-content .zone-wrapper .zone .region-inner {
   margin: 0;
-  padding: 20px;
+  padding: 0px;
 }
 
 /* Sidebars */
 #section-content #region-sidebar-first,
 #section-content #region-sidebar-second {
-
+  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(245,245,245,1) 50%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(50%,rgba(245,245,245,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(245,245,245,1) 50%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(245,245,245,1) 50%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(245,245,245,1) 50%,rgba(255,255,255,0) 100%); /* IE10+ */
+  background: linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(245,245,245,1) 50%,rgba(255,255,255,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 }
 #section-content #region-sidebar-first .region-inner,
 #section-content #region-sidebar-second .region-inner {
+  background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
+  background: linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
   height: 100%;
   padding: 20px;
 }
 #section-content #region-sidebar-first > .separator,
 #section-content #region-sidebar-second > .separator {
-   bottom: 0;
+  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(212,212,212,0.98) 49%, rgba(213,213,213,1) 50%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(49%,rgba(212,212,212,0.98)), color-stop(50%,rgba(213,213,213,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(212,212,212,0.98) 49%,rgba(213,213,213,1) 50%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(212,212,212,0.98) 49%,rgba(213,213,213,1) 50%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(212,212,212,0.98) 49%,rgba(213,213,213,1) 50%,rgba(255,255,255,0) 100%); /* IE10+ */
+  background: linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(212,212,212,0.98) 49%,rgba(213,213,213,1) 50%,rgba(255,255,255,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+  bottom: 0;
   position: absolute;
   top: 0;
   width: 1px;
