--- a/sites/all/themes/prolifik/css/prolifik-menu.css
+++ b/sites/all/themes/prolifik/css/prolifik-menu.css
@@ -1,9 +1,7 @@
 /* @override 
-	http://hilton.loc/sites/all/themes/navin/css/prolifik-menu.css?m5bgn5
-	http://hilton.loc/sites/all/themes/navin/css/prolifik-menu.css?m5cpcl
-	http://btcv.biz/sites/all/themes/prolifik/css/prolifik-menu.css?m5f2cd
-	http://hi-express.loc/sites/all/themes/navin/css/prolifik-menu.css?m5pnkk
 	http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-menu.css?mcij8s
+	http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-menu.css?me49qb
+	http://www.customtourbus.com/sites/all/themes/prolifik/css/prolifik-menu.css?me5wue
 */
 
 /* Menu */
@@ -12,6 +10,17 @@
   min-height: 30px;
   z-index: 10;
   }
+
+.front #zone-menu-wrapper {
+  z-index: 1;
+	padding-top: 10px;
+	-webkit-box-shadow: #666 0px 0px 10px;
+-moz-box-shadow: #666 0px 0px 10px;
+box-shadow: #666 0px 0px 10px;
+	background-color: black;
+	background-image: none;
+}
+
 
 #zone-menu-wrapper {
   z-index: 1;
@@ -26,7 +35,6 @@ background: url(../images/stainless-footer.jpg) -260px #060505;
 }
 #region-menu nav > ul.menu > li {
   background: none;
-  float: none;
   list-style: none;
   margin: 0 5px 0 0;
   padding: 0;
